# festival-dashboard

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
data/data_20251027/: clean_seoul_culture_events.csv  raw_seoul_culture_events.csv
docker/superset/: docker-compose.yml
queries/adhoc/: test.sql
queries/bi/: category_analytics.sql  category_view.sql  eventmap_view.sql  location_bi.sql  monthly_event_trends.sql  quarterly_category_trends.sql  seasonal_event_trends.sql
queries/fact_table/: insert_fact_table.sql  upsert_fact_table.sql
src/: etl_to_s3.py
src/bi/: category_view_builder.py  create_analysis_views.py  eventmap_view_builder.py  location_view_builder.py
src/common/: query_loader.py  redshift_client.py
src/dataset/: etl_to_s3.py
src/load/: fact_table_loader.py
